--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,12 @@ volumes:
   node_modules:
   builds:
   emptyDockerDir:
+#  nfsmountCC:
+#    driver: local
+#    driver_opts:
+#      type: nfs
+#      o: addr=10.90.239.72       # IP of nfs server.  This is also where you put any options '-o' in standard option format
+#      device: ":/opt/compilers/"  # location on nfs server of file/dir you want to mount
 networks:
   app_network:
 services:  
